- harddrake:
  o allow to set zero values in module options (#26515)
  o make "Run config tool" available again (#34794)
  o mark the service as interactive, so that package requests are
    displayed with parallell init
- drakbug:
  o report crash messages in the bug report only when --incident is used
    (and not when tools explicitely run drakbug with --report)
- handle atl2 ethernet driver

Version 10.6 - 11 December 2007, by Thierry Vignaud

- handle new drivers:
  o ethernet: fec_mpc52xx, niu
  o gigabit: tehuti
  o pata: pata_cs5536
  o sata: sata_fsl
  o wireless: b43, b43legacy, iwlwifi, libertas_cs, p54pci, p54usb
- localedrake:
  o adjust Uzbek locale (cf locales-uz change)

Version 10.5.7 - 6 December 2007, by Thierry Vignaud

- handle new drivers: e1000e, snd-oxygen, snd-pcsp
- bootloader-config:
  o do not drop entries "failsafe" and "linux-nonfb" when removing a kernel
- localedrake:
  o adapt to cooker: scim-tables-skim is now skim-scim-tables
  o restrict the proposed input-methods for each language
- bootloader:
  o when reading existing menu.lst, keep verbatim entries for which the device
  has no mount-point
  o handle "alien" grub entries that will be kept verbatim (#23591)
  o handle "root (hd...)" for menu.lst entries (#23591)
    (nb: when writing, "root ..." will not be used)
- diskdrake:
  o drop "Undo", "Restore partition table", "Save partition table"
    (preparing to switch to libparted)
  o fix garbaged error messages when umounting fs
  o disallow "Use for loopback" when the partition used for loopback is
    not formatted (#35535)
  o always display the {info} field of the drive (not only in expert mode)

Version 10.5.3 - 9 November 2007, by Pascal "Pixel" Rigaux

- bootloader-config:
  o do not create "linux" entries for xen kernels, but "xen" entries instead
- localedrake:
  o fix handling variant together with charset (eg: uz.UTF-8@Latn) (#35090)
- drakbug:
  o prevent altering tool and the like when catching a bug (#35241)
