@@ -3,6 +3,7 @@
   o make "Run config tool" available again (#34794)
   o mark the service as interactive, so that package requests are
     displayed with parallell init
+  o check that media are not USB keys before auto-configuring them (#34568)
 - drakbug:
   o report crash messages in the bug report only when --incident is used
     (and not when tools explicitely run drakbug with --report)
